------------------------------------------------------------------------------

Core
------------------
 * Exposed sorcery-based configuration files like pjsip.conf to dialplans via
   the new AST_SORCERY diaplan function.

ARI
------------------
 * The live recording object on recording events now contains a target_uri
   field which contains the URI of what is being recorded.

 * A channelId can now be provided when creating a channel, either in the
   uri (POST channels/my-channel-id) or as query parameter.  A local channel
   will suffix the second channel id with ';2' unless provided as query
   parameter otherChannelId.

 * A bridgeId can now be provided when creating a bridge, either in the uri
   (POST bridges/my-bridge-id) or as a query parameter.

 * A playbackId can be provided when starting a playback, either in the uri
   (POST channels/my-channel-id/play/my-playback-id) or as a query parameter.

 * A snoop channel can be started with a snoopId, in the uri or query.

AMI
------------------
 * Originate now takes optional parameters ChannelId and OtherChannelId,
   used to set the UniqueId on creation.  The other id is assigned to the
   second channel when dialing LOCAL, or defaults to appending ;2 if only
   the single Id is given.

res_pjsip
------------------
 * transport and endpoint ToS options (tos, tos_audio, and tos_video) may now
   be set as the named set of ToS values (cs0-cs7, af11-af43, ef).

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.0.0 to Asterisk 12.1.0 ------------
------------------------------------------------------------------------------

AMI
------------------
 * Added a new module that provides AMI control over MWI within Asterisk,
   res_mwi_external_ami. Note that this module depends on res_mwi_external;
   for more information on enabling this module, see res_mwi_external.
   This module provides the MWIGet/MWIUpdate/MWIDelete actions, as well as